# S7toModbusGatway

./: README.md
S7toModBusGW/: .cproject  .project  CMakeLists.txt  LED.cpp  ModbusServer.cpp  ModbusServer_old.cpp  PLC.cpp  dataItem.cpp  main.cpp
S7toModBusGW/Include/: LED.h  ModbusServer.h  PLC.h  dataItem.h
Start_shells/: ConfigNetwork.sh  Restart.sh  RestartButton.service  S7toModbus.service  StartFirmware.sh  dhcpcd.conf.template
